# android_swig_test

./: .gitignore
SWIG_Test/: settings.gradle.kts
SWIG_Test/app/: build.gradle.kts
SWIG_Test/app/src/androidTest/java/com/micro_leads/swigtest/: ExampleInstrumentedTest.kt
SWIG_Test/app/src/main/: AndroidManifest.xml
SWIG_Test/app/src/main/cpp/: CMakeLists.txt  interface.i  native-lib.c  native-lib.cpp  native-lib.h  typemaps.i
SWIG_Test/app/src/main/cpp/.swig/: interfaceJAVA_wrap.c
SWIG_Test/app/src/main/java/com/micro_leads/swigtest/: MainActivity.kt
SWIG_Test/app/src/main/java/com/micro_leads/swigtest/test/: SWIGTYPE_p_int32_t.java  SWIGTYPE_p_uint8_t.java  SWIGTYPE_p_void.java  _test.java  foo.java  swigtest_native_swig.java  swigtest_native_swigJNI.java
SWIG_Test/app/src/main/res/values/: strings.xml  themes.xml
SWIG_Test/app/src/main/res/values-night/: themes.xml
SWIG_Test/app/src/test/java/com/micro_leads/swigtest/: ExampleUnitTest.kt
SWIG_Test/gradle/: libs.versions.toml
SWIG_Test/gradle/wrapper/: gradle-wrapper.properties
